--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,9 @@ on:
 
 jobs:
   on-push-and-daily:
-    name: Install Node
+    name: Install Node & Frontend
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies in frontend
       run: cd frontend && npm install
 
       - name: Copy frontend.json file artifact
