--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,16 +18,14 @@ jobs:
       with:
         name: frontend.json
         path: /frontend/public/
-
-      - name: Build Vue
-        run: cd frontend && npm run build
-
-        - name: Deploy Vue Site
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./frontend/dist
-          publish_branch: gh-pages
-          user_name: 'OSS Sauce Bot'
-          user_email: 'oss-sauce-bot@users.noreply.github.com'
-          commit_message: ${{ github.event.head_commit.message }}
+      name: Build Vue
+      run: cd frontend && npm run build
+      name: Deploy Vue Site
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        personal_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./frontend/dist
+        publish_branch: gh-pages
+        user_name: 'OSS Sauce Bot'
+        user_email: 'oss-sauce-bot@users.noreply.github.com'
+        commit_message: ${{ github.event.head_commit.message }}
