--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,21 +11,21 @@ jobs:
     name: Install Node & Frontend
     runs-on: ubuntu-latest
     steps:
-      run: cd frontend && npm install
-
-      name: Copy frontend.json file artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: frontend.json
-        path: /frontend/public/
-      name: Build Vue
-      run: cd frontend && npm run build
-      name: Deploy Vue Site
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        personal_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./frontend/dist
-        publish_branch: gh-pages
-        user_name: 'OSS Sauce Bot'
-        user_email: 'oss-sauce-bot@users.noreply.github.com'
-        commit_message: ${{ github.event.head_commit.message }}
+      - name: Install Frontend
+        run: cd frontend && npm install
+      - name: Copy frontend.json file artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend.json
+          path: /frontend/public/
+      - name: Build Vue
+        run: cd frontend && npm run build
+      - name: Deploy Vue Site
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist
+          publish_branch: gh-pages
+          user_name: 'OSS Sauce Bot'
+          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
