--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,15 +10,25 @@ jobs:
   on-push-and-daily:
     runs-on: ubuntu-latest
     steps:
+      - name: Gives access to repository
+        uses: actions/checkout@v2
+      - name: Setup Node version
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12'
+
       - name: Install Frontend
         run: cd frontend && npm install
+
       - name: Copy frontend.json file artifact
         uses: actions/download-artifact@v2
         with:
           name: frontend.json
           path: /frontend/public/
+
       - name: Build Vue
         run: cd frontend && npm run build
+
       - name: Deploy Vue Site
         uses: peaceiris/actions-gh-pages@v3
         with:
