--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -1,12 +1,8 @@
 name: Verify Repo Health Daily
 
-# on:
-#   schedule:
-#     - cron: '0 0 * * *'
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
