--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: frontend-json
-          path: /frontend/public/
+          path: ~/frontend/public
+
+      - name: Display structure of downloaded artifact
+          run: ls -R
+          working-directory: frontend/public
 
       - name: Build Vue
         run: cd frontend && npm run build
