--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -31,3 +31,26 @@ jobs:
           path: frontend/public/frontend.json
           retention-days: 1
 
+  Deploy:
+    steps:
+      - name: Install Frontend
+        run: cd frontend && npm install
+
+      - name: Copy artifact to frontend
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend-json
+          path: ~/frontend/public
+
+      - name: Build Vue
+        run: cd frontend && npm run build
+
+      - name: Deploy Vue Site
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist
+          publish_branch: gh-pages
+          user_name: 'OSS Sauce Bot'
+          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
