Re add deploy steps within

--- a/.github/workflows/lint-and-deploy-on-push-to-main.yml
+++ b/.github/workflows/lint-and-deploy-on-push-to-main.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
 jobs:
   Lint-Deploy:
     runs-on: ubuntu-latest
@@ -31,4 +28,26 @@ jobs:
           name: frontend-json
           path: frontend/public/frontend.json
           retention-days: 1
+
+      - name: Install Frontend
+        run: cd frontend && npm install
+
+      - name: Copy artifact to frontend
+        uses: actions/download-artifact@v2
+        with:
+          name: frontend-json
+          path: ~/frontend/public
+
+      - name: Build Vue
+        run: cd frontend && npm run build
+
+      - name: Deploy Vue Site
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./frontend/dist
+          publish_branch: gh-pages
+          user_name: 'OSS Sauce Bot'
+          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          commit_message: ${{ github.event.head_commit.message }}
 
