Try to fix wring deploy data

--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -18,24 +18,24 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Generate artifact
+      - name: Generate frontend data
         run: node src/index.js
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: frontend-json
-          path: frontend/public/frontend.json
-          retention-days: 1
+      # - name: Upload artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: frontend-json
+      #     path: frontend/public/frontend.json
+      #     retention-days: 1
 
       - name: Install Frontend
         run: cd frontend && npm install
 
-      - name: Copy artifact to frontend
-        uses: actions/download-artifact@v2
-        with:
-          name: frontend-json
-          path: ~/frontend/public
+      # - name: Copy artifact to frontend
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: frontend-json
+      #     path: ~/frontend/public
 
       - name: Build Vue
         run: cd frontend && npm run build
