--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   workflow_run:
-    workflows: ["Verify Repo Health Daily", "Lint And Deploy On Push To Main"]
+    # workflows: ["Verify Repo Health Daily", "Lint And Deploy On Push To Main"]
+    workflows: ["none"]
     types:
       - completed
 
