--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: frontend-json
-          path: ~/frontend/public
+          path: ./frontend/public
 
       - name: Build Vue
         run: cd frontend && npm run build
