--- a/check-my-repo-config.json
+++ b/check-my-repo-config.json
@@ -1,4 +1,6 @@
 {
   "owner": "apifortress",
-  "pagination": 100
+  "pagination": 100,
+  "action-user-name": "OSS Sauce Bot",
+  "action-email": "oss-sauce-bot@users.noreply.github.com"
 }
