Change config to saucelabs

--- a/check-my-repo-config.json
+++ b/check-my-repo-config.json
@@ -1,5 +1,5 @@
 {
-  "owner": "apifortress",
+  "owner": "saucelabs",
   "pagination": 100,
   "action-user-name": "OSS Sauce Bot",
   "action-email": "oss-sauce-bot@users.noreply.github.com"
