--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.8.2",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
-    "vue-router": "^3.4.9",
+    "vue-router": "3.5.1",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
