Add token to try to solve api rate limit on jobs

--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           node-version: '12'
 
       - name: Install dependencies
