--- a/.github/workflows/lint-and-deploy-on-push-to-main.yml
+++ b/.github/workflows/lint-and-deploy-on-push-to-main.yml
@@ -11,15 +11,18 @@ jobs:
     steps:
       - name: Gives access to repository
         uses: actions/checkout@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           node-version: '12'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Generate frontened data
+      - name: Generate frontend data
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: node src/index.js
@@ -32,10 +35,10 @@ jobs:
 
       - name: Deploy Vue Site
         uses: peaceiris/actions-gh-pages@v3
-          personal_token: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./frontend/dist
           publish_branch: gh-pages
           user_name: 'OSS Sauce Bot'
           user_email: 'oss-sauce-bot@users.noreply.github.com'
           commit_message: ${{ github.event.head_commit.message }}
-
