--- a/.github/workflows/daily-check.yml
+++ b/.github/workflows/daily-check.yml
@@ -10,20 +10,16 @@ jobs:
     steps:
       - name: Gives access to repository
         uses: actions/checkout@v2
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Setup Node version
         uses: actions/setup-node@v1
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
           node-version: '12'
 
       - name: Install dependencies
         run: npm install
 
       - name: Generate frontend data
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: node src/index.js
 
       - name: Install Frontend
@@ -35,9 +31,8 @@ jobs:
       - name: Deploy Vue Site
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./frontend/dist
           publish_branch: gh-pages
-          user_name: 'OSS Sauce Bot'
-          user_email: 'oss-sauce-bot@users.noreply.github.com'
+          user_name: 'OSS Check My Repo'
+          user_email: 'oss-check-my-repo-bot@users.noreply.github.com'
           commit_message: ${{ github.event.head_commit.message }}
