--- a/.github/workflows/lint-and-deploy-on-push-to-main.yml
+++ b/.github/workflows/lint-and-deploy-on-push-to-main.yml
@@ -21,6 +21,8 @@ jobs:
         run: npm install
 
       - name: Generate frontend data
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: node src/index.js
 
       - name: Install Frontend
@@ -32,6 +34,7 @@ jobs:
       - name: Deploy Vue Site
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./frontend/dist
           publish_branch: gh-pages
           user_name: 'OSS Check My Repo'
