Delete unnecessary config files

--- a/frontend/public/config.json
+++ b/frontend/public/config.json
@@ -1,4 +1,3 @@
 {
-  "github": "https://github.com/saucelabs?q=&type=public&language=&sort=",
-  "logo": "ospo-bot-new.svg"
+  "github": "https://github.com/saucelabs?q=&type=public&language=&sort="
 }
