Add worksflow to create artifact

--- a/.github/workflows/lint-and-deploy-on-push-to-main.yml
+++ b/.github/workflows/lint-and-deploy-on-push-to-main.yml
@@ -25,6 +25,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: node src/index.js
 
+      - name: Generate Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: frontend/public/frontend.json
+
       - name: Install Frontend
         run: cd frontend && npm install
 
