--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,30 +9,31 @@
     "deploy": "sh deploy.sh"
   },
   "dependencies": {
-    "core-js": "^3.8.2",
+    "core-js": "3.22.4",
+    "npm-check-updates": "12.5.11",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.6.12",
+    "vue": "2.6.14",
     "vue-router": "3.5.1",
-    "vuex": "^3.6.0"
+    "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.10",
-    "@vue/cli-plugin-eslint": "~4.5.10",
-    "@vue/cli-plugin-pwa": "~4.5.10",
-    "@vue/cli-plugin-router": "~4.5.10",
-    "@vue/cli-plugin-vuex": "~4.5.10",
-    "@vue/cli-service": "~4.5.10",
+    "@vue/cli-plugin-babel": "4.5.17",
+    "@vue/cli-plugin-eslint": "4.5.17",
+    "@vue/cli-plugin-pwa": "4.5.17",
+    "@vue/cli-plugin-router": "4.5.17",
+    "@vue/cli-plugin-vuex": "4.5.17",
+    "@vue/cli-service": "4.5.17",
     "axe-core": "4.2.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.17.0",
-    "eslint-plugin-vue": "^7.4.1",
-    "lint-staged": "^10.5.3",
-    "pug": "^3.0.0",
+    "eslint": "7.32.0",
+    "eslint-plugin-vue": "7.20.0",
+    "lint-staged": "10.5.4",
+    "pug": "3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "sass": "^1.32.2",
-    "sass-loader": "^10.1.0",
+    "sass": "1.51.0",
+    "sass-loader": "10.2.1",
     "vue-axe": "2.4.4",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "2.6.14"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
