--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,15 +17,15 @@
     "vuex": "3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.17",
-    "@vue/cli-plugin-eslint": "4.5.17",
-    "@vue/cli-plugin-pwa": "4.5.17",
-    "@vue/cli-plugin-router": "4.5.17",
-    "@vue/cli-plugin-vuex": "4.5.17",
-    "@vue/cli-service": "4.5.17",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-pwa": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "axe-core": "4.2.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "6.8.0",
+    "eslint": "7.5.0",
     "eslint-plugin-vue": "7.20.0",
     "lint-staged": "10.5.4",
     "pug": "3.0.2",
