--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-plugin-vuex": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "axe-core": "4.2.0",
+    "axe-core": "^4.8.3",
     "babel-eslint": "^10.1.0",
     "eslint": "7.5.0",
     "eslint-plugin-vue": "7.20.0",
