--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,8 @@
     "lint-staged": "10.5.4",
     "pug": "3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "sass": "1.51.0",
-    "sass-loader": "10.2.1",
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.3",
     "vue-axe": "2.4.4",
     "vue-template-compiler": "2.6.14"
   },
